[gd_scene load_steps=8 format=3 uid="uid://cvjh4bmixj83h"]

[ext_resource type="Script" uid="uid://b7qdx3j1qn5pl" path="res://Scripts/arrow.gd" id="1_2ndhl"]
[ext_resource type="Texture2D" uid="uid://b7k7eu7rjv44f" path="res://Assets/arrow.png" id="2_2ndhl"]
[ext_resource type="Texture2D" uid="uid://bglvrktjfdw4x" path="res://Assets/blood.png" id="3_acd0x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ndhl"]
size = Vector2(30, 3)

[sub_resource type="Curve" id="Curve_acd0x"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_6a6ax"]
curve = SubResource("Curve_acd0x")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v8qja"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, 98, 0)
scale_min = 0.25
scale_max = 1.25
color = Color(1, 0, 0, 1)
alpha_curve = SubResource("CurveTexture_6a6ax")

[node name="Arrow" type="Area2D" groups=["bullet"]]
script = ExtResource("1_2ndhl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, 0.5)
shape = SubResource("RectangleShape2D_2ndhl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_2ndhl")

[node name="Particles" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
texture = ExtResource("3_acd0x")
one_shot = true
explosiveness = 1.0
local_coords = true
process_material = SubResource("ParticleProcessMaterial_v8qja")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="Particles" to="." method="_on_particles_finished"]
